examples/test/testpolicy11731.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11731
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key11: value41
      key27: value2
      key31: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value30
          key2: value0
          key37: value19
      podSelector:
        matchLabels:
          key13: value2
